--- a/elite/index.html
+++ b/elite/index.html
@@ -9,6 +9,8 @@ img {
 </head>
 <body>
 
+<a href="https://giphy.com/explore/nyan-cat">Clique aqui para gatinhos!</a>
+
 <img src="elite.png" alt="Logo do Elite" width="700" height="700">
 
 </body>
