--- a/elite/index.html
+++ b/elite/index.html
@@ -9,9 +9,10 @@ img {
 </head>
 <body>
 <p>
-<a href="https://giphy.com/explore/nyan-cat">Clique aqui para gatinhos!</a>
- </p>
-<img src="elite.png" alt="Logo do Elite" width="700" height="700">
+<a href="https://giphy.com/explore/nyan-cat">
 
+<img src="elite.png" alt="Logo do Elite" width="700" height="700">
+ </a>
+ </p>
 </body>
 </html> 
